# disky

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bacon.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: scenarios.md
claude-skill/disky/: SKILL.md  render.py
docs/: README.md  index.html  roadmap-v0.8-v0.12.md
docs/reports/: v0.10.0-release-editorial.html  v0.10.0-release-simple.html  v0.10.0-release-via-bili.html  v0.10.0-release.html  v0.10.0-roadmap-monte-carlo.html  v0.10.1-release-v2.html  v0.10.1-release.html  v0.11.0-release.html
docs/research/: disky-top10-recovered.html  rust-vs-giants-recovered.html
features/: benchmarks.feature  composability.feature  disk-management.feature
metrics/: baseline.json  build-timings.jsonl  competitors-latest.json  git-snapshot.json  latest.json
scripts/: bench-competitors.sh  collect-metrics.sh  install-hooks.sh  mk-bigtree.sh  pre-commit.sh
src/: cleanup.rs  cli.rs  config.rs  db.rs  display.rs  duration.rs  envelope.rs  exit.rs  filter.rs  ignore.rs  lib.rs  main.rs  pattern.rs  policy.rs  predict.rs  query.rs  render.rs  scan.rs  schema.rs  snapshots.rs
src/tui/: app.rs  mod.rs  tree.rs  ui.rs
tests/: agentic.rs  lib_integration.rs
