[package]
name = "disky"
version = "0.10.1"
edition = "2021"
description = "Fast macOS disk analyzer — scan, explore, clean up"
license = "MIT OR Apache-2.0"
repository = "https://github.com/biliboss/disky"
homepage = "https://github.com/biliboss/disky"
keywords = ["disk", "analyzer", "cli", "macos", "tui"]
categories = ["command-line-utilities", "filesystem"]
readme = "README.md"
rust-version = "1.75"

[lib]
name = "disky"
path = "src/lib.rs"

[[bin]]
name = "disky"
path = "src/main.rs"

[dependencies]
jwalk = "0.8"
duckdb = { version = "1.1", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
indicatif = "0.17"
flume = "0.11"
humansize = "2"
anyhow = "1"
chrono = "0.4"
num_cpus = "1"
memchr = "2"
ratatui = "0.29"
crossterm = "0.28"
arboard = "3"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
toml = "0.8"

[dev-dependencies]
dirs = "5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
split-debuginfo = "unpacked"
incremental = true

# Deps compile once at -O3; our code stays unoptimized for fast iteration.
[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.test]
inherits = "dev"

[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 1
